--- a/view/index.html
+++ b/view/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <form id="bookingForm">
+    <form id="bookingForm" action="/submit-booking" method="POST">
         <label>Name: <input type="text" name="name" required></label>
         <label>Phone: <input type="text" name="phone" required></label>
         <label>Service: <input type="text" name="service" required></label>
